--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-async-storage/async-storage": "^1.17.3",
     "@react-native-community/datetimepicker": "^6.7.1",
     "@react-native-community/slider": "^4.3.3",
+    "@react-native-seoul/kakao-login": "^5.3.1",
     "@react-native/metro-config": "^0.73.2",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
