chore: Info.plist 수정

--- a/ios/Youngduck/Info.plist
+++ b/ios/Youngduck/Info.plist
@@ -21,16 +21,16 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleURLTypes</key>
- 	<array>
-	<dict>
-	  <key>CFBundleTypeRole</key>
-	  <string>Editor</string>
-	  <key>CFBundleURLSchemes</key>
-	  <array>
-	    <string>$(KAKAO_NATIVE_APP_KEY_WITH_KAKAO)</string>
-	  </array>
-	</dict>
- 	</array>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>$(KAKAO_NATIVE_APP_KEY_WITH_KAKAO)</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>KAKAO_APP_KEY</key>
@@ -45,9 +45,16 @@
 	<true/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
 		<key>NSExceptionDomains</key>
 		<dict>
 			<key>localhost</key>
+			<dict>
+				<key>NSExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
+			</dict>
+			<key>$(EXCEPTION_DOMAIN)</key>
 			<dict>
 				<key>NSExceptionAllowsInsecureHTTPLoads</key>
 				<true/>
