--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-config": "^1.5.1",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^14.1.0",
     "react-native-svg-transformer": "^1.3.0",
     "react-native-web": "^0.18.10",
