--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.71.4",
+    "react-native-animated-bottom-drawer": "^0.0.23",
     "react-native-calendars": "^1.1303.0",
     "react-native-config": "^1.5.1",
     "react-native-safe-area-context": "^4.8.2",
