--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-animated-bottom-drawer": "^0.0.23",
     "react-native-calendars": "^1.1303.0",
     "react-native-config": "^1.5.1",
+    "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
     "react-native-svg": "^14.1.0",
