--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-navigation/native-stack": "^6.9.17",
     "@tanstack/react-query": "^5.17.0",
     "axios": "^1.6.3",
+    "date-fns": "^3.2.0",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.71.4",
