feat: calendar-picker value 값 타입 수정

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^18.2.0",
     "react-native": "0.71.4",
     "react-native-animated-bottom-drawer": "^0.0.23",
+    "react-native-calendar-picker": "^8.0.0",
     "react-native-calendars": "^1.1303.0",
     "react-native-config": "^1.5.1",
     "react-native-linear-gradient": "^2.8.3",
