--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@actbase/react-daum-postcode": "^1.0.4",
     "@invertase/react-native-apple-authentication": "^2.3.0",
     "@react-native-async-storage/async-storage": "^1.17.3",
     "@react-native-community/datetimepicker": "^6.7.1",
@@ -44,6 +45,7 @@
     "react-native-svg": "^14.1.0",
     "react-native-svg-transformer": "^1.3.0",
     "react-native-web": "^0.18.10",
+    "react-native-webview": "^13.6.4",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
