--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-native-seoul/kakao-login": "^5.3.1",
     "@react-native/metro-config": "^0.73.2",
     "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/material-top-tabs": "^6.6.5",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@tanstack/react-query": "^5.17.0",
@@ -38,11 +39,13 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^17.1.0",
+    "react-native-pager-view": "^6.2.3",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^14.1.0",
     "react-native-svg-transformer": "^1.3.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-web": "^0.18.10",
     "zustand": "^4.4.7"
   },
