--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     "react-native-calendar-picker": "^8.0.0",
     "react-native-calendars": "^1.1303.0",
     "react-native-config": "^1.5.1",
+    "react-native-image-crop-picker": "^0.40.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^17.1.0",
+    "react-native-permissions": "^4.0.4",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
     "react-native-splash-screen": "^3.3.0",
