--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^14.1.0",
     "react-native-svg-transformer": "^1.3.0",
+    "react-native-uuid": "^2.0.1",
     "react-native-web": "^0.18.10",
     "react-native-webview": "^13.6.4",
     "zustand": "^4.4.7"
