--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "@invertase/react-native-apple-authentication": "^2.3.0",
     "@react-native-async-storage/async-storage": "^1.17.3",
     "@react-native-community/datetimepicker": "^6.7.1",
+    "@react-native-community/push-notification-ios": "^1.11.0",
     "@react-native-community/slider": "^4.3.3",
+    "@react-native-firebase/analytics": "^18.8.0",
+    "@react-native-firebase/app": "^18.8.0",
+    "@react-native-firebase/messaging": "^18.8.0",
     "@react-native-seoul/kakao-login": "^5.3.1",
     "@react-native/metro-config": "^0.73.2",
     "@react-navigation/bottom-tabs": "^6.5.11",
@@ -42,15 +46,16 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^17.1.0",
-    "react-native-permissions": "^4.0.4",
     "react-native-pager-view": "^6.2.3",
+    "react-native-permissions": "^4.0.4",
+    "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^14.1.0",
     "react-native-svg-transformer": "^1.3.0",
-    "react-native-uuid": "^2.0.1",
     "react-native-tab-view": "^3.5.2",
+    "react-native-uuid": "^2.0.1",
     "react-native-web": "^0.18.10",
     "react-native-webview": "^13.6.4",
     "zustand": "^4.4.7"
@@ -80,6 +85,7 @@
     "@types/react": "^18.0.24",
     "@types/react-native": "^0.70.6",
     "@types/react-native-calendar-picker": "^8.0.0",
+    "@types/react-native-push-notification": "^8.1.4",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
