chore: 안드로이드 패키지명 변경

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -94,14 +94,14 @@ android {
 
     compileSdkVersion rootProject.ext.compileSdkVersion
 
-    namespace "com.youngduck"
+    namespace "com.popcornmate"
     defaultConfig {
-        applicationId "com.youngduck"
+        applicationId "com.popcornmate"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
-        resValue "string", "build_config_package", "com.youngduck"
+        resValue "string", "build_config_package", "com.popcornmate"
     }
 
     splits {
