--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,11 +1,11 @@
-//apply plugin: "com.android.application"
-//apply plugin: "com.google.gms.google-services"
-plugins {
-    id "com.android.application"
+apply plugin: "com.android.application"
+apply plugin: "com.google.gms.google-services"
+//plugins {
+//    id "com.android.application"
 
-    // Add the Google services Gradle plugin
-    id "com.google.gms.google-services"
-}
+//    // Add the Google services Gradle plugin
+//    id "com.google.gms.google-services"
+//}
 apply from: project(':react-native-config').projectDir.getPath() + "/dotenv.gradle"
 apply plugin: "com.facebook.react"
 
