--- a/android/build.gradle
+++ b/android/build.gradle
@@ -21,9 +21,9 @@ buildscript {
         classpath("com.facebook.react:react-native-gradle-plugin")
     }
 
-    plugins {
-        // Add the dependency for the Google services Gradle plugin
-        id 'com.google.gms.google-services' version '4.4.0' apply false
+    //plugins {
+    //    // Add the dependency for the Google services Gradle plugin
+    //    id 'com.google.gms.google-services' version '4.4.0' apply false
 
-    }
+    //}
 }
