[FEAT] 알람 초기 세팅 및 FCM 알람 기능 (#78)
* chore: firebase, notification 라이브러리 설치

* chore: 안드로이드 패키지명 변경

* chore: 안드로이드 notification 설정

* chore: firebase 안드로이드 세팅

* fix: firebase 빌드 에러 해결

* feat: 기본 알람 설정 set up 구현

* feat: device 토큰 가져오기

* fix: gitignore에 추가

* fix: ignore에 google-service 추가

* feat: iOS 알람 설정

---------

Co-authored-by: gs0428 <lider28@naver.com>

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,4 +1,11 @@
 apply plugin: "com.android.application"
+apply plugin: "com.google.gms.google-services"
+//plugins {
+//    id "com.android.application"
+
+//    // Add the Google services Gradle plugin
+//    id "com.google.gms.google-services"
+//}
 apply from: project(':react-native-config').projectDir.getPath() + "/dotenv.gradle"
 apply plugin: "com.facebook.react"
 
@@ -94,14 +101,14 @@ android {
 
     compileSdkVersion rootProject.ext.compileSdkVersion
 
-    namespace "com.youngduck"
+    namespace "com.popcornmate"
     defaultConfig {
-        applicationId "com.youngduck"
+        applicationId "com.popcornmate"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
-        resValue "string", "build_config_package", "com.youngduck"
+        resValue "string", "build_config_package", "com.popcornmate"
     }
 
     splits {
@@ -160,6 +167,9 @@ dependencies {
     debugImplementation("com.facebook.flipper:flipper-network-plugin:${FLIPPER_VERSION}") {
         exclude group:'com.squareup.okhttp3', module:'okhttp'
     }
+
+    implementation platform('com.google.firebase:firebase-bom:32.7.1')
+    implementation 'com.google.firebase:firebase-analytics'
 
     debugImplementation("com.facebook.flipper:flipper-fresco-plugin:${FLIPPER_VERSION}")
     if (hermesEnabled.toBoolean()) {
