--- a/android/build.gradle
+++ b/android/build.gradle
@@ -17,6 +17,13 @@ buildscript {
     }
     dependencies {
         classpath("com.android.tools.build:gradle:7.3.1")
+        classpath('com.google.gms:google-services:4.3.3')
         classpath("com.facebook.react:react-native-gradle-plugin")
     }
+
+    //plugins {
+    //    // Add the dependency for the Google services Gradle plugin
+    //    id 'com.google.gms.google-services' version '4.4.0' apply false
+
+    //}
 }
