--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-native-svg": "^14.1.0",
     "react-native-svg-transformer": "^1.3.0",
     "react-native-tab-view": "^3.5.2",
+    "react-native-toast-message": "^2.2.0",
     "react-native-uuid": "^2.0.1",
     "react-native-web": "^0.18.10",
     "react-native-webview": "^13.6.4",
