feat: 필요한 패키지 설치

--- a/package.json
+++ b/package.json
@@ -37,11 +37,13 @@
     "react-dom": "^18.2.0",
     "react-native": "0.71.4",
     "react-native-animated-bottom-drawer": "^0.0.23",
+    "react-native-blob-util": "^0.19.6",
     "react-native-calendar-picker": "^8.0.0",
     "react-native-calendars": "^1.1303.0",
     "react-native-config": "^1.5.1",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-image-crop-picker": "^0.40.2",
+    "react-native-image-picker": "^7.1.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^13.0.1",
