--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@tanstack/react-query": "^5.17.0",
     "axios": "^1.6.3",
     "date-fns": "^3.2.0",
+    "is-url-http": "^2.3.7",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.71.4",
