--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-config": "^1.5.1",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-image-picker": "^7.1.0",
+    "react-native-inappbrowser-reborn": "^3.7.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^13.0.1",
