--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-calendars": "^1.1303.0",
     "react-native-config": "^1.5.1",
     "react-native-encrypted-storage": "^4.0.3",
+    "react-native-error-boundary": "^1.2.4",
     "react-native-image-picker": "^7.1.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.8.3",
